--- a/css/public.css
+++ b/css/public.css
@@ -79,6 +79,7 @@ ul,li{list-style: none; margin: 0px;}
   p{overflow-wrap: break-word; word-wrap: break-word;}
   a {word-break: break-all;}
   p img { max-width: 80%; margin-right: 20px; border:1px solid #ccc;}
+  .article_body p img{border: none;}
   .wrapper{ margin-top: 0;}
   .content{ border: none; padding: 10px 0px; margin-left: 0;}
   .main { margin-top:40px;}
