--- a/_view/prototypes.ejs
+++ b/_view/prototypes.ejs
@@ -18,8 +18,8 @@
       <!--content blocks -->
       <div class="block-wrapper">
         <div class="block-l" style="background-image:url('<%= Source_img %>project.jpg')"> <a href="./current/index.html"><span>Current Projects</span></a></div>
-        <div class="block-r" style="background-image:url('<%= Source_img %>experimental.jpg')"> <a href="./experimental/index.html"><span>Experimental</span></a></div>
-        <div class="block-l" style="background-image:url('<%= Source_img %>archiving.jpeg')"> <a href="./archived/index.html"><span>Archived</span></a></div>
+        <div class="block-r" style="background-image:url('<%= Source_img %>experimental.jpg')"> <a href="./experimental/index.html"><span>Experimental Concepts</span></a></div>
+        <div class="block-l" style="background-image:url('<%= Source_img %>archiving.jpeg')"> <a href="./archived/index.html"><span>Archived Projects</span></a></div>
         <div class="block-r" style="background-image:url('<%= Source_img %>faq.jpg')"> <a href="./guide/index.html"><span>FAQ & Troubleshoot</span></a></div>
       </div>
     </div>
