--- a/css/public.css
+++ b/css/public.css
@@ -19,11 +19,11 @@ ul,li{list-style: none; margin: 0px;}
 
 .breadcrumbs{ padding: 0; margin: 7px 0; height: 30px; max-width: 100%; overflow: hidden;}
 .breadcrumbs li{ display: inline; font-size: 12px; margin-right: 10px; }
-.breadcrumbs li a{ color: #14A792;font-size: 12px; }
-.breadcrumbs li+li::before{ content: ' › '; color: #14A792; }
+.breadcrumbs li a{ color: #4F5051;font-size: 12px; }
+.breadcrumbs li+li::before{ content: ' › '; color: #4F5051; }
 .breadcrumbs li:last-child a{ text-decoration: none;}
 .content{ width: 100%; /* border-right: 1px solid #ccc; */ }
-.copyright {   width: 100%; margin: 80px auto; text-align: center;  color: #4F5051;}
+.copyright {   width: 100%; margin: 80px auto; text-align: center;  color: #4F5051; font-size: 12px;}
 
 /* header */
 .header { background-color: #fff; position: relative; width: 100%; margin: 0 auto; z-index: 3; }
