--- a/css/detail.css
+++ b/css/detail.css
@@ -4,16 +4,17 @@
 
 .article_body,.article_footer{padding: 0 100px 0 150px;}
 .article_body {padding: 0;}
-.article_body p{color: #292929; margin-top: 14px; line-height: 21px; word-wrap:break-word; }
+.article_body p{color: #292929; margin-bottom: 15px; line-height: 21px; word-wrap:break-word; }
+.article_body p em {color: #292929; margin-bottom: 15px;font-size:14px;} /* for disclaimers */
 .article_body a{color: #07C1E4;display: inline;word-wrap:break-word; max-width: 90%;  }
 .article_body *:first-child{margin-top: 0px;}
 .article_body pre{margin-top: 20px;}
 .article_body p img { max-width: 80%;  margin-right: 20px; flex: 1;}
-.article_body p img[alt="mobile"],.article_body p img[alt="Desktop"],.article_body p img[alt="MX800"]{max-width: 28%; height: 150px;}
+.article_body p img[alt="mobile"],.article_body p img[alt="Desktop"],.article_body p img[alt="MX800"],.article_body p img[alt="SparkBoard"]{max-width: 28%; height: 150px;}
 .article_body h1{font-size: 24px; color: #343537; height: 30px; line-height: 30px; margin-top: 30px; font-weight: 400;}
 .article_body h2{font-size: 18px; color: #343537; height: 20px; line-height: 20px; margin-top: 40px;}
 .article_body h3{font-size: 16px; color: #343537; height: 20px; line-height: 20px; margin-top: 20px;}
-.article_body h4{font-size: 16px; color: #343537; height: 20px; line-height: 20px; margin-top: 20px; margin-bottom: -10px;}
+.article_body h4{font-size: 16px; color: #343537; height: 20px; line-height: 20px; margin-top: 20px;} /*margin-bottom: -10px;*/
 .article_body ol ul li{text-indent:15px;list-style: circle; list-style-position: inside;}
 
 table{margin-top: 20px;}
@@ -31,5 +32,5 @@ td,th{border:1px solid #ccc; padding: 0 14px;}
 @media only screen and (max-width: 480px) {
 	.article_header{ height: 40px;line-height: 40px;}
 	.article_header h1{font-size:26px; height: 40px; line-height: 40px;}
-	.article_body p img[alt="mobile"],.article_body p img[alt="Desktop"],.article_body p img[alt="MX800"]{display: none;}
+	.article_body p img[alt="mobile"],.article_body p img[alt="Desktop"],.article_body p img[alt="MX800"],.article_body p img[alt="SparkBoard"{display: none;}
 }
