--- a/css/public.css
+++ b/css/public.css
@@ -37,13 +37,13 @@ ul,li{list-style: none; margin: 0px;}
 .NavContent .Nav{ margin-left: 124px; width:900px; height: 80px;}
 .NavContent .Nav>li{display: inline-block; position: relative;  margin-right: 10px;height: 80px; line-height: 80px; }
 .NavContent .Nav>li>a{display: inline-block; text-align:center; height: 80px; line-height: 80px; padding: 0 20px; text-decoration: none; font-size: 18px; color: #4f5051;}
-.NavContent .Nav>li:hover>a,.NavContent .Nav>li .current{color: #049fd9;border-bottom: 2px solid #049fd9; height: 78px;}
+.NavContent .Nav>li:hover>a,.NavContent .Nav>li .current{color: #07C1E4;border-bottom: 2px solid #07C1E4; height: 78px;}
 
 .NavContent .Nav>li .subMenu{position: absolute; top: 100%; left: 0px;  display: none; margin: 0px;}
 .NavContent .Nav>li:hover .subMenu{display: block; width: 100%; text-align: center;}
 .subMenu li {width: 100%; height: 40px; }
 .subMenu li a{ display: block; width: 100%; height: 40px; line-height: 40px; text-decoration: none; background:rgba(255,255,255,0.9); color: #4f5051; text-align: center; font-size: 14px;}
-.subMenu li a:hover,.subMenu li .current{color: #049fd9;}
+.subMenu li a:hover,.subMenu li .current{color: #07C1E4;}
 
 /* menu */
 
